--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,11 +6,11 @@ author_profile: true
 ---
 <p>I have taught several undegraduate courses at the Linguistics department of Université de Montréal while completing my PhD. These include the following courses:</p>
 <ul>
-  <li>Introduction to French syntax</li>
-  <li>Advanced syntax</li>
-  <li>Introduction to French morphology</li>
+  <li><em>Introduction to French syntax</em></li>
+  <li><em>Advanced syntax</em></li>
+  <li><em>Introduction to French morphology</em></li>
 </ul>
-<p>This semester in Leiden, I taught the Introduction to French syntax course to students in the French BA program. Next semester, I'll be teaching various classes including an introductory course to French morphology in addition to language courses (Grammaire et vocabulaire) and a couple courses on Francophonie.<p/>
+<p>This semester in Leiden, I taught the <em>Introduction to French syntax</em> course to students in the French BA program. Next semester, I'll be teaching various classes including an introductory course to French morphology in addition to language courses (Grammaire et vocabulaire) and a couple courses on Francophonie.<p/>
 
 {% include base_path %}
 
